--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ out/
 
 # Ignore config.py files from examples
 examples/**/config.py
+
+# Ignore log files from modem_passthrough utility
+util/modem_passthrough/*.log
