--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         ["walter_modem/structs.py", "github:QuickSpot/walter-micropython/walter_modem/structs.py"],
         ["walter_modem/utils.py", "github:QuickSpot/walter-micropython/walter_modem/utils.py"],
         ["walter_modem/mixins/__init__.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/__init__.py"],
+        ["walter_modem/mixins/common.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/common.py"],
+        ["walter_modem/mixins/sim_network.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/sim_network.py"],
+        ["walter_modem/mixins/tls_certs.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/sim_network.py"],
         ["walter_modem/mixins/gnss.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/gnss.py"],
         ["walter_modem/mixins/http.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/http.py"],
         ["walter_modem/mixins/mqtt.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/mqtt.py"],
