--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         ["walter_modem/mixins/http.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/http.py"],
         ["walter_modem/mixins/mqtt.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/mqtt.py"],
         ["walter_modem/mixins/pdp.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/pdp.py"],
-        ["walter_modem/mixins/socket.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/socket.py"]
+        ["walter_modem/mixins/socket.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/socket.py"],
+        ["walter_modem/mixins/sleep.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/sleep.py"]
     ],
-    "version": "1.1.0"
+    "version": "1.2.0"
 }
